<?xml version="1.0"?>
<package format="2">
  <name>robot_slam</name>
  <version>0.0.0</version>
  <description>The robot_slam package</description>

  <maintainer email="robot@todo.todo">robot</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>hector_mapping</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>slam_karto</build_depend>
  <build_depend>ydlidar</build_depend>
  <build_export_depend>amcl</build_export_depend>
  <build_export_depend>gmapping</build_export_depend>
  <build_export_depend>hector_mapping</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>slam_karto</build_export_depend>
  <build_export_depend>ydlidar</build_export_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>slam_karto</exec_depend>
  <exec_depend>ydlidar</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
