<?xml version="1.0"?>
<package format="2">
  <name>robot_startup</name>
  <version>0.0.0</version>
  <description>The robot_startup package</description>

  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
